syntax = "proto3";

package user;
option go_package = "yourproject/internal/user/pb;pb";

message User {
  uint32 id = 1;
  string email = 2;
  string username = 3;
  string created_at = 4;
  string updated_at = 5;
}

message CreateUserRequest {
  string email = 1;
  string username = 2;
}

message GetUserByIDRequest {
  uint32 id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message ListUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (User);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc ListUsers(google.protobuf.Empty) returns (ListUsersResponse);
}